tests/machine/x/hs/map_assign.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isInfixOf, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)

scores = Map.fromList [("alice", 1)]

main :: IO ()
main = do
  let scores = 2
  print (fromMaybe (error "missing") (Map.lookup "bob" scores))
